feat: add create user documentation
